プロフィール画像挿入

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         /* キャッチフレーズセクション */
         .hero {
             text-align: center;
-            padding: 4rem 1rem;
+            padding: 0.5rem 1rem; /* 上のパディングを減らしてタイトルに近づける */
         }
 
         .hero h2 {
-            font-size: 2rem;
+            font-size: 2.66rem; /* フォントサイズを2/3に縮小 */
             color: #d9538d; /* 少し濃いピンク */
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.2); /* 影を追加 */
@@ -145,31 +145,31 @@
                 <h2>Our Members</h2>
                 <div class="member-grid">
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=Yuya" alt="Yuyaのプロフィール画像">
+                        <img src="素材/プロフィール画像/Yuya.png" alt="Yuyaのプロフィール画像">
                         <h3>Yuya</h3>
                     </div>
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=SUZUHIRO" alt="SUZUHIROのプロフィール画像">
+                        <img src="素材/プロフィール画像/SUZUHIRO.png" alt="SUZUHIROのプロフィール画像">
                         <h3>SUZUHIRO</h3>
                     </div>
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=Peccolona" alt="Peccolonaのプロフィール画像">
+                        <img src="素材/プロフィール画像/Peccolona.png" alt="Peccolonaのプロフィール画像">
                         <h3>Peccolona</h3>
                     </div>
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=mayuche" alt="mayucheのプロフィール画像">
+                        <img src="素材/プロフィール画像/mayuche.png" alt="mayucheのプロフィール画像">
                         <h3>mayuche</h3>
                     </div>
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=ToriKami" alt="ToriKamiのプロフィール画像">
-                        <h3>ToriKami</h3>
+                        <img src="素材/プロフィール画像/ToriKami.png" alt="とりかみのプロフィール画像">
+                        <h3>とりかみ</h3>
                     </div>
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=タラ" alt="タラのプロフィール画像">
+                        <img src="素材/プロフィール画像/タラ.png" alt="タラのプロフィール画像">
                         <h3>タラ</h3>
                     </div>
                     <div class="member-card">
-                        <img src="https://via.placeholder.com/150/FFC0CB/FFFFFF?text=Kisaragi" alt="如月工房のプロフィール画像">
+                        <img src="素材/プロフィール画像/如月工房.png" alt="如月工房のプロフィール画像">
                         <h3>如月工房</h3>
                     </div>
                 </div>
