--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
                     </div>
                 </div>
             </section>
+
+            <section class="awards members"> <!-- membersクラスを再利用してスタイルを統一 -->
+                <h2>受賞実績</h2>
+                <ul>
+                    <li>The SANDBOX GameJam - Tokyo City Builder - Meiji Shrine Twilight：上位9チーム入賞</li>
+                    <li>The SANDBOX GameJam - Game Jam Japan - The Road to Heaven：第1位</li>
+                    <li>The SANDBOX GameJam - Playboy Game Jam - Fascinating Casino Island：第4位</li>
+                </ul>
+            </section>
         </div>
     </main>
 
