スマホ対応2

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         /* スマートフォン向け調整 */
         @media (max-width: 768px) {
             header h1 {
-                font-size: 5rem; /* スマートフォンではフォントサイズを小さく */
+                font-size: 3rem; /* スマートフォンではさらにフォントサイズを小さく */
             }
 
             header .logo {
