メンバー紹介タイトル変更

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </section>
 
             <section class="members">
-                <h2>Our Members</h2>
+                <h2>Meet the Team</h2>
                 <div class="member-grid">
                     <div class="member-card">
                         <img src="素材/プロフィール画像/Yuya.png" alt="Yuyaのプロフィール画像">
